# hwut

./: COPYING.txt  COPYRIGHT.txt  GetPot.py  LICENSE-LGPL-2.1.txt  LICENSE-MIT.txt  TODO-Sequences.txt  hwut-exe.py  hwut-mode.vim  hwut-requirements.txt  hwut.bat  hwut.py  hwut2cygwin.bat  hwut2cygwin.sh  pack-help.sh  pyproject.toml  unit_test_results.txt
TEST/: 13.sh  15.sh  17.sh  20.sh  22.sh  f-remote-socket.sh  f15.sh  f16.sh  f20.sh  hwut_call.sh  hwut_greet.sh  no-relpath.sh
TEST/15/: Makefile  mini.c
TEST/17/: Makefile  Makefile.good  failure.sh  hello-before.py
TEST/20/: bad.sh  both.sh  good.sh  interview_file_name.txt  original-bad.sh  original-both.sh  original-good.sh
TEST/22/: Makefile  also.sh
TEST/ADM/: cache.fly  title.txt
TEST/GOOD/: 13.sh--local.txt  13.sh--recursive.txt  15.sh.txt  17.sh.txt  20.sh--normal-info.txt  20.sh--touched.txt  20.sh--untouched.txt  22.sh.txt  22.sh.txt.tmp.before  f15.sh.txt  f16.sh.txt  f20.sh--1-file.txt  f20.sh--2-files.txt  no-relpath.sh.txt
TEST/f15/: 10ms_a.sh  10ms_b.sh  1700ms_a.sh  1700ms_b.sh  debug.txt  make_waiter.sh
TEST/f16/: oversizer.sh
adm/: pack-help.sh  show-dirt.sh  show-missing-license-headers.sh
doc/: command-line-options.txt  epilog.txt  main.html  main.txt  xml-output.txt
hwut/: 1  GetPot.py  TODO-threads.py  __init__.py  aux.py  auxiliary.py  classes.py  cli.py  command_line.py  common.py  core.py  difference.py  directory.py  frs_py  good.py  help.py  hwut-exe.py  io.py  make.py  move_remove.py  test_executer.py  worker_pool.py
web/: HWUT-homepage.html  HWUT-logo.xcf
(+946 files in other folders)
